--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "vue-cli-service serve",
+        "dev": "vue-cli-service serve --hot --open",
         "build": "vue-cli-service build",
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
         "axios": "^0.19.0",
         "core-js": "^2.6.5",
+        "l-markdown": "^1.0.5",
         "register-service-worker": "^1.6.2",
         "vue": "^2.6.10",
         "vue-router": "^3.0.3",
-        "vuex": "^3.0.1",
-        "l-markdown": "^1.0.0"
+        "vuex": "^3.0.1"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "^3.9.0",
