--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     },
     "dependencies": {
         "axios": "^0.19.0",
+        "body-parser": "^1.19.0",
         "core-js": "^2.6.5",
+        "express": "^4.17.1",
         "l-markdown": "^1.0.5",
+        "mongoose": "^5.9.3",
+        "morgan": "^1.9.1",
         "register-service-worker": "^1.6.2",
+        "serve-favicon": "^2.5.0",
         "vue": "^2.6.10",
         "vue-router": "^3.0.3",
         "vuex": "^3.0.1"
