--- a/package.json
+++ b/package.json
@@ -32,11 +32,8 @@
         "eslint-plugin-vue": "^5.0.0",
         "less": "^3.0.4",
         "less-loader": "^4.1.0",
-        "mockjs": "^1.0.1-beta3",
-        "sass": "^1.22.3",
-        "sass-loader": "^7.1.0",
-        "scss": "^0.2.4",
-        "scss-loader": "0.0.1",
+        "stylus": "^0.54.7",
+        "stylus-loader": "^3.0.2",
         "vue-template-compiler": "^2.6.10"
     }
 }
